# zen

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  LICENSE  README.adoc  main.c  meson.build  meson_options.txt  zen-config.h.meson  zen.desktop
appearance/: appearance.c  appearance.h  meson.build
appearance/scene/: virtual-object.c  virtual-object.h
backend/: meson.build
backend/glfw/: backend.c  meson.build  output.c
backend/headless/: backend.c  meson.build  output.c
backend/src/: backend.c  output.c  pointer.c  seat.c
clients/: application.cc  application.h  array.cc  array.h  bounded.cc  bounded.h  box.cc  box.vert  buffer.cc  buffer.h  color.frag  common.h  cuboid.cc  cuboid.h  default.vert  fd.h  gl-base-technique.cc  gl-base-technique.h  gl-buffer.cc  gl-buffer.h  gl-program.cc  gl-program.h  gl-shader.cc  gl-shader.h  gl-texture.cc  gl-texture.h  gl-vertex-array.cc  gl-vertex-array.h  loop.cc  loop.h  meson.build  region.cc  region.h  rendering-unit.cc  rendering-unit.h  shm-pool.cc  shm-pool.h  simple-box.cc  texture.frag  virtual-object.cc  (+4 more)
clients/assets/: Bedroom.mtl  House.mtl  bathroom.mtl  chair.mtl  modern_room.mtl
clients/background/: field.cc  field.h  file-reader.h  http-reader.h  main.cc  meson.build  obj-parser.cc  obj-viewer.cc  obj-viewer.h
clients/background-bathroom/: file-reader.h  http-reader.h  main.cc  meson.build  obj-parser.cc  obj-parser.h  obj-viewer.cc  obj-viewer.h  png-loader.cc  png-loader.h  reader.h  types.h
clients/background-room/: http-reader.h  main.cc  meson.build  obj-parser.h  obj-viewer.cc  png-loader.h
clients/background-sky/: field.cc  meson.build
clients/include/: cmdline.h  zukou.h
clients/obj-viewer/: file-reader.cc  http-reader.cc  main.cc  meson.build  obj-parser.cc  obj-parser.h  obj-viewer.cc  obj-viewer.h  reader.h  types.h  viewer.h
clients/simple-box/: app.cc  app.h  box.cc  box.h  main.cc  meson.build
clients/zdnd/: box.cc  box.h  dnd.cc  dnd.h  file-reader.h  http-reader.h  main.cc  meson.build  reader.h  stl-object.h  stl-viewer.cc  stl-viewer.h  types.h  viewer.h
clients/zpreview/: app.cc  app.h  file-reader.h  http-reader.h  main.cc  meson.build  obj-object.cc  obj-object.h  obj-viewer.cc  obj-viewer.h  reader.h  stl-object.cc  stl-object.h  stl-viewer.cc  stl-viewer.h
clients/zukou/: app.cc  background.cc  buffer.cc  cuboid-window.cc  data-offer.cc  data-source.cc  debug.cc  glm-helper.cc  meson.build  opengl-component.cc  opengl-element-array-buffer.cc  opengl-shader-program.cc  opengl-texture.cc  opengl-vertex-buffer.cc  virtual-object.cc
clients/zview/: app.cc  box.cc  file-reader.cc  http-reader.cc  internal.h  main.cc  meson.build  stl-object.cc
common/: cairo.c  cmd.c  font.c  log.c  meson.build  signal.c  terminate.c  types.c  weak-resource.c
common/include/: zen-common.h
common/src/: color.c  delay-signal.c  log.c  signal.c  terminate.c  wl-array.c
common/tests/: color-hsl.c  meson.build
cui-client/: main.c  meson.build
desktop/: main.c  meson.build
desktop/src/: animation.c  cursor-grab.c  screen-container.c  screen-layout.c  screen.c  shell.c  theme.c  view.c  xr-system.c
desktop/tests/: meson.build
desktop/theme/: meson.build
libzen/: backend.h  callback.c  callback.h  compositor.c  compositor.h  log.c  meson.build  output.h  virtual-object.c  virtual-object.h  weak-link.c
libzen-compositor/: callback.c  callback.h  cglm-helper.c  compositor.c  config.c  data-device-manager.c  data-device.c  data-offer.c  data-source.c  drag-grab.c  drag-grab.h  file.c  keyboard-client.c  keyboard-client.h  keyboard.c  log.c  meson.build  ray-client.c  ray-client.h  ray.c  seat.c  udev-seat.c  virtual-object.c  virtual-object.h  weak-link.c
libzen/backend-glfw/: backend.c  meson.build  output.c
libzen/backend-headless/: backend.c  meson.build  output.c
libzen/opengl-renderer/: meson.build  opengl-component.c  opengl-component.h  opengl-renderer.c  opengl-renderer.h  opengl.c  opengl.h
protocol/: meson.build
protocols/: meson.build  zen-desktop.xml
scene/: meson.build  output.c  output.h  render.c  scene.c  scene.h  toplevel-view.c  toplevel-view.h
scene/include/: zen-scene.h
src/: input-device.c  input-device.h  input-manager.c  input-manager.h  main.c  meson.build  output.c  output.h  seat-device.c  seat-device.h  seat.c  seat.h  server.c  server.h  xdg-toplevel-view.c  xdg-toplevel-view.h
src/backend/: meson.build
src/session/: dbus.c  dbus.h  meson.build  session-logind.c
test-harness/: assert.c  meson.build  test-harness.c
test-harness/include/: test-harness.h
tests/: cglm-wl-array-test.c  load-backend.c  meson.build  noop-test.c  test-runner.c  test-runner.h  validate-xml-test.c  virtual-object-role-test.c
tests/protocol/: validate-xml-test.c
wlr-backend/: meson.build
wlr-backend/src/: backend.c
zen/: binding.c  board.c  build-config.h.meson  config.c  cursor.c  data-device-manager.c  data_device_manager.c  decoration-manager.c  display-system.c  input-device.c  input-manager.c  keyboard.c  main.c  meson.build  output.c  peer.c  pointer.c  ray.c  remote.c  render-2d.c  scene.c  screen-layout.c  screen-renderer.c  screen.c  seat.c  server.c  space.c  view-child.c  view.c  view.h  virtual-object.c  xdg-decoration.c  xdg-popup-view.c  xdg-popup.c  xdg-toplevel-view.c  xwayland-view.c
zen-shell/: background.c  background.h  cuboid-window.c  cuboid-window.h  desktop.c  desktop.h  intersection.c  intersection.h  meson.build  shell.c
zen-wlr-glew-renderer/: meson.build
zen-xr/: meson.build
zgnroot/: meson.build
zigzag/: meson.build
zna/: base-unit.c  base-unit.h  board.c  board.h  cursor.c  cursor.h  meson.build  ray.c  ray.h  shader-inventory.c  shader-inventory.h  system.c  system.h  view-child.c  view-child.h  view.c  view.h  virtual-object.c  virtual-object.h
znr/: meson.build
znr-remote/: meson.build
zns/: board.c  board.h  bounded.c  bounded.h  expansive.c  expansive.h  meson.build  node.c  node.h  seat-capsule.c  seat-capsule.h  shell.c  shell.h
zwnroot/: meson.build
(+950 files in other folders)
