option('tests',
  description: 'Compile tests',
  type: 'boolean',
  value: 'true')
option('clients',
  description: 'Comiple sample clients',
  type: 'boolean',
  value: 'true')
option('cui-client',
  description: 'Comiple cui client',
  type: 'boolean',
  value: 'true')
option('default-wallpaper',
  description: 'Install the default wallpapers',
  type: 'boolean',
  value: 'true')
